# Python-Developer-Proffesional

./: .gitignore  .pylintrc  output.txt
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
homework_01/: .coverage  .pylintrc  Dockerfile  README.MD  config.json  logfile.json  pyproject.toml  report.html
homework_02/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  pyproject.toml  return.py  tuple.py  typealias.py  union.py  variable.py
homework_03/: pyproject.toml
homework_04/: api.py  pyproject.toml  store.py  test.py
homework_06/: main.py  pyproject.toml
homework_07/: server.py
homework_08/: docker-compose.yml  pyproject.toml
homework_08/home_project/home_app/: admin.py  models.py  tests.py  urls.py  views.py
homework_08/home_project/home_app/migrations/: 0001_initial.py
homework_08/home_project/home_app/static/home_app/: style.css
homework_08/home_project/home_app/templates/home_app/: detail.html  index.html  results.html
homework_08/home_project/home_project/: settings.py  urls.py
homework_09/: Dockerfile  main.py  pyproject.toml
homework_10/: logistic_regression.py  pyproject.toml  test_logistic_regression.py
homework_11/: analysis.ipynb  pyproject.toml
homework_12/: pyproject.toml
homework_14/: check_data.py  data.py  main.py  memcache_loader.py  pyproject.toml
homework_15/: person_pb2.py  protobuf_writer.c  protobuf_writer.pyx  pyproject.toml  setup.py  test_protobuf_writer.py
homework_16/: crawler.py  pyproject.toml
homework_17/: docker-compose.yml  go.mod  main.go  result.txt
(+43 files in other folders)
