[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2 = "^2.9.9"
django-debug-toolbar = "^4.4.6"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
pillow = "^10.4.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.10"
